[gd_scene load_steps=30 format=3 uid="uid://cckjrg5mx6cqp"]

[ext_resource type="PackedScene" uid="uid://kpnlifa2cxf7" path="res://assets/objects/settings_ui.tscn" id="1_6r1sy"]
[ext_resource type="Script" uid="uid://rot254kw74qr" path="res://assets/scripts/player.gd" id="1_bkysh"]
[ext_resource type="PackedScene" uid="uid://dp16chaj03n5u" path="res://assets/models/sheepmodel.tscn" id="1_ikdab"]
[ext_resource type="AudioStream" uid="uid://ijgggmfu3va3" path="res://assets/audio/deaths/Maltigi scream.mp3" id="2_5pvfp"]
[ext_resource type="Texture2D" uid="uid://cdovwkedvp0um" path="res://assets/textures/thegouls.jpg" id="2_xvjlw"]
[ext_resource type="Texture2D" uid="uid://nohi363i1m8t" path="res://assets/textures/explosion-Sheet.png" id="3_jg13i"]
[ext_resource type="AudioStream" uid="uid://jccsstg3m8ue" path="res://assets/audio/explode.wav" id="3_jssbp"]
[ext_resource type="AudioStream" uid="uid://dhgigyh074s3d" path="res://assets/audio/baa.wav" id="5_fh75e"]
[ext_resource type="FontFile" uid="uid://b6jjdr4a7agoe" path="res://assets/IMPACT.TTF" id="6_nqkij"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6r1sy"]
size = Vector3(1, 0.423, 1.718)

[sub_resource type="AtlasTexture" id="AtlasTexture_jssbp"]
atlas = ExtResource("3_jg13i")
region = Rect2(0, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r1sy"]
atlas = ExtResource("3_jg13i")
region = Rect2(200, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqkij"]
atlas = ExtResource("3_jg13i")
region = Rect2(400, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvjlw"]
atlas = ExtResource("3_jg13i")
region = Rect2(600, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh75e"]
atlas = ExtResource("3_jg13i")
region = Rect2(800, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkysh"]
atlas = ExtResource("3_jg13i")
region = Rect2(1000, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvyht"]
atlas = ExtResource("3_jg13i")
region = Rect2(1200, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_htwuo"]
atlas = ExtResource("3_jg13i")
region = Rect2(1400, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_34ecl"]
atlas = ExtResource("3_jg13i")
region = Rect2(1600, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg3d2"]
atlas = ExtResource("3_jg13i")
region = Rect2(1800, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qp14"]
atlas = ExtResource("3_jg13i")
region = Rect2(2000, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgtm8"]
atlas = ExtResource("3_jg13i")
region = Rect2(2200, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_7muya"]
atlas = ExtResource("3_jg13i")
region = Rect2(2400, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0ns2"]
atlas = ExtResource("3_jg13i")
region = Rect2(2600, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjy6x"]
atlas = ExtResource("3_jg13i")
region = Rect2(2800, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7bc3"]
atlas = ExtResource("3_jg13i")
region = Rect2(3000, 0, 200, 284)

[sub_resource type="AtlasTexture" id="AtlasTexture_usqfr"]
atlas = ExtResource("3_jg13i")
region = Rect2(3200, 0, 200, 284)

[sub_resource type="SpriteFrames" id="SpriteFrames_nqkij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jssbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r1sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqkij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvjlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh75e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvyht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htwuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ecl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg3d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qp14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgtm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7muya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0ns2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjy6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7bc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usqfr")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"Explode",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"NONE",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_bkysh"]
size = Vector3(1, 2, 3)

[node name="Player" type="Node3D"]
script = ExtResource("1_bkysh")

[node name="Controller" type="VehicleBody3D" parent="."]
mass = 30.0

[node name="Collision" type="CollisionShape3D" parent="Controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.165, -0.112)
shape = SubResource("BoxShape3D_6r1sy")

[node name="sheepmodel" parent="Controller" instance=ExtResource("1_ikdab")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -0.522, 0.932)

[node name="BackRight" type="VehicleWheel3D" parent="Controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, -0.205, -0.922)
use_as_steering = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="FrontRight" type="VehicleWheel3D" parent="Controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, -0.205, 0.748)
use_as_traction = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="BackLeft" type="VehicleWheel3D" parent="Controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, -0.205, -0.925)
use_as_steering = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="FrontLeft" type="VehicleWheel3D" parent="Controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, -0.205, 0.748)
use_as_traction = true
wheel_radius = 0.4
wheel_friction_slip = 100.0
suspension_stiffness = 50.0
suspension_max_force = 60000.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="Camera" type="Camera3D" parent="Controller"]
transform = Transform3D(-1, -3.45797e-08, 8.02931e-08, 0, 0.918446, 0.395546, -8.74228e-08, 0.395546, -0.918446, 0, 2.557, -2.082)
fov = 110.0

[node name="death_ray" type="RayCast3D" parent="Controller"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4412, 0)
target_position = Vector3(0, 1, 0)
collision_mask = 2

[node name="player_display" type="Label3D" parent="Controller"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.39748, 0)
layers = 2
pixel_size = 0.02
billboard = 1
text = "STEAMUSER99"

[node name="theghoul" type="Sprite3D" parent="Controller"]
transform = Transform3D(0.7, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
visible = false
pixel_size = 0.005
billboard = 1
texture = ExtResource("2_xvjlw")

[node name="SFX" type="Node3D" parent="Controller"]
unique_name_in_owner = true

[node name="Death1" type="AudioStreamPlayer3D" parent="Controller/SFX"]
stream = ExtResource("2_5pvfp")
volume_db = -35.0
max_distance = 10.0

[node name="Explode" type="AudioStreamPlayer3D" parent="Controller/SFX"]
stream = ExtResource("3_jssbp")
volume_db = -11.0
pitch_scale = 1.4
max_distance = 300.0
panning_strength = 1.4

[node name="Baa" type="AudioStreamPlayer3D" parent="Controller/SFX"]
stream = ExtResource("5_fh75e")
volume_db = -15.0
max_db = 0.6
max_distance = 40.0

[node name="VFX" type="Node3D" parent="Controller"]

[node name="Explosion" type="AnimatedSprite3D" parent="Controller/VFX"]
pixel_size = 0.03
billboard = 1
sprite_frames = SubResource("SpriteFrames_nqkij")
animation = &"NONE"
autoplay = "NONE"

[node name="DeathArea" type="Area3D" parent="Controller"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Controller/DeathArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_bkysh")

[node name="SettingsMenu" parent="." instance=ExtResource("1_6r1sy")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Title" type="RichTextLabel" parent="UI/Control"]
layout_mode = 1
offset_right = 213.0
offset_bottom = 40.0
scale = Vector2(3.2, 2)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_nqkij")
theme_override_font_sizes/normal_font_size = 12
text = "CrazyCattle3D Multiplayer Release 1.0"

[node name="Title2" type="RichTextLabel" parent="UI/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -209.0
offset_right = 213.0
offset_bottom = -169.0
grow_vertical = 2
scale = Vector2(4, 1.6)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_nqkij")
theme_override_font_sizes/normal_font_size = 12
text = "Join the Discord"

[node name="Remaining" type="RichTextLabel" parent="UI/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -61.0
offset_right = 211.0
offset_bottom = -21.0
grow_vertical = 0
scale = Vector2(6, 3)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_nqkij")
theme_override_font_sizes/normal_font_size = 12
text = "0 remain."

[node name="FreeCam" type="Camera3D" parent="."]
unique_name_in_owner = true
fov = 110.0
